src/test/deca/syntax/valid/test_synt/variables/sum_of_variables.deca
// Description:
//    Test de print de variable z qui la somme de 2 autre variables (x , y) apres avoir 
//    les introduits et leur assignée des valeurs 
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//
// Historique:
//    cree le 12/01/2022

{
    int x,y,z  ;   
    x = 5  ;
    y = 6 ;
    z = x + y ; 
   print(z) ;
}
